<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Amlogic, Inc. All rights reserved.
  ~
  ~ This source code is subject to the terms and conditions defined in the
  ~ file 'LICENSE' which is part of this source code package.
  ~
  ~ Description:
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_position"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_position" />

        <EditText
            android:id="@+id/edit_surface_position"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/sf_default_position"
            android:text="@string/sf_default_position"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_sie"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_size" />

        <EditText
            android:id="@+id/edit_surface_size"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/sf_default_size"
            android:text="@string/sf_default_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_format"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_format" />

        <EditText
            android:id="@+id/edit_surface_format"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/sf_default_format"
            android:text="@string/sf_default_format"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_layer_alpha"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_layer_alpha" />

        <EditText
            android:id="@+id/edit_surface_layer_alpha"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/sf_default_alpha"
            android:text="@string/sf_default_alpha"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_render_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_render_type" />

        <EditText
            android:id="@+id/edit_surface_render_type"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/sf_default_type"
            android:text="@string/sf_default_type"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_refresh_frames"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_refresh_frames" />

        <EditText
            android:id="@+id/edit_surface_refresh_frames"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/sf_default_frames"
            android:text="@string/sf_default_frames"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sf_refresh_interval"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sf_refresh_interval" />

        <EditText
            android:id="@+id/edit_surface_refresh_interval"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/sf_default_interval"
            android:text="@string/sf_default_interval"/>
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/discard_parameter_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard_parameter_setting" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/apply_parameter_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_parameter_setting" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>